--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 Thumbs.db
+KAT WALK/.vs/KAT WALK/v15/Server/sqlite3/storage.ide-wal
+KAT WALK/.vs/KAT WALK/v15/Server/sqlite3/storage.ide-wal
