--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ ehthumbs.db
 Thumbs.db
 KAT WALK/.vs/KAT WALK/v15/Server/sqlite3/storage.ide-wal
 KAT WALK/.vs/KAT WALK/v15/Server/sqlite3/storage.ide-wal
+KAT WALK/.vs/KAT WALK/v15/Server/sqlite3/storage.ide-wal
